@@ -1,5 +1,8 @@
 2006-09-08  Scott James Remnant  <scott@netsplit.com>
 
+	* util/shutdown.c (event_setter): Change the event names to
+	distinguish between "shutdown -h" and "shutdown -h -H".
+
 	* init/job.c (job_handle_event): Allow jobs to react to their own
 	events, this is how we'll do respawn eventually.
 	* init/tests/test_job.c (test_handle_event): Remove test.
